--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^0.27.2",
+    "css-loader": "^6.7.3",
     "install": "^0.13.0",
     "json-server": "^0.17.0",
     "npm": "^8.19.2",
@@ -19,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "style-loader": "^3.3.1",
     "swiper": "^8.4.2",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
